<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableReport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="0dp">

    <TableRow
        android:id="@+id/ReportView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_device"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_device"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/table_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_username"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/table_datetime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_datetime"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/table_co2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_co2"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/table_dist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_dist"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/table_stepcounter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/stylo_reportview"

            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/str_stepcounter"
            android:textColor="@color/teal_700"
            android:textSize="10sp" />


    </TableRow>

</TableLayout>