<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0bd2c4aaec549a68d590e27"
    tools:context=".data.RQActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/header_airquality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reportview"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Switch
                android:id="@+id/user_switch"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sw_report_name" />

            <Spinner
                android:id="@+id/user_spinner"
                android:layout_width="249dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Switch
                android:id="@+id/disp_switch"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sw_report_device" />

            <Spinner
                android:id="@+id/disp_spinner"
                android:layout_width="249dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Switch
                android:id="@+id/date_switch"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sw_report_date" />

            <EditText
                android:id="@+id/date_dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Switch
                android:id="@+id/mode_switch"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sw_report_mode" />

            <Spinner
                android:id="@+id/mode_spinner"
                android:layout_width="249dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp">

                <TableRow>

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_device"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_username"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_datetime"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_co2"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_dist"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@color/teal_700"
                        android:gravity="center_horizontal"

                        android:padding="10sp"
                        android:text="@string/str_stepcounter"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="10sp" />


                </TableRow>

            </TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/BackButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>