<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="100"
    android:background="@drawable/_0bd2c4aaec549a68d590e27"
    android:padding="5dp"
    tools:context=".AdminHome"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/bodyTextColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/admin_home"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/QueryButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:backgroundTint="@color/black"
            android:text="@string/btn_calibrate" />

        <Button
            android:id="@+id/RsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:backgroundTint="@color/black"
            android:text="@string/btn_recordmain" />

        <Button
            android:id="@+id/RdButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:backgroundTint="@color/black"
            android:text="@string/btn_recordmain2" />

        <Button
            android:id="@+id/RPButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:backgroundTint="@color/black"
            android:text="@string/btn_reportview" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        tools:layout_editor_absoluteX="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

